# armm-data-engineering

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .semgrepignore  README.md  docker-compose-tolam-earth.yml  docker-compose.yml  docker-documentation.md  pyproject.toml
hem/armm/: geo.py  handlers.py  new-data-sources.md  nft.py  open-source data.md
hem/armm/clustering/data/: clustered-data.csv  pool_meta.json  simulated_data.csv  test.csv  train.csv
hem/armm/clustering/model/: README.md  basemodel.py  basemodel_GM_template.py  gridsearch.py  pipelinemodel.py
hem/armm/clustering/pool_meta/: README.md  main.py
hem/armm/clustering/predict/: README.md  loadmodel.py  main.py
hem/armm/clustering/preprocessing/: README.md  preprocessing.py
hem/armm/clustering/train/: README.md  helper.py  main.py
hem/armm/data/: global-first-subdivision.csv
hem/armm/data_simulator/: README.md  main.py
hem/armm/data_simulator/test_cases_json/: README.md  main.py
hem/armm/pricing/: README.md  main.py  pricing.py
services/nft_base/: Dockerfile
services/nft_classifier/: Dockerfile  README.md  main.py  model.pkl  requirements.txt
services/nft_pricing/: Dockerfile  README.md  main.py  requirements.txt
services/nft_transformer/: Dockerfile  README.md  main.py
tests/end-to-end test cases/: README.md
tests/nft/: test_geo.py  test_nft.py
tests/nft_classifier/: test_nft_classifier.py
tests/nft_pricing/: test_nft_pricing.py
tests/nft_pricing/data/: pool_meta.json  request-100-nft.json
tests/nft_transformer/: test_nft_transformer.py
(+28 files in other folders)
